# da-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  da_renderer  run.sh
include/: utils.h
include/meshes/: triangle.h
notes/: 1-intro.md
src/: config.h  main.cpp  utils.cpp
src/meshes/: triangle.cpp
src/shaders/: fragment.txt  vertex.txt
